VoxPop/Site/Content/Site.css
/**              ***               **/
/* LAYOUT - Affects Layout.cshtml and other site-wide styling*/

body {
    margin: 0px;
    min-height: 100%;
}

* {
    font-family: 'Segoe WP SemiLight';
    /*color: #060606;*/
}

a {
    color: #422dff;
    text-decoration: none;
}

.global-hr-line {
    margin-top: 20%;
    margin-bottom: -19%;
}

.global-footer {
   padding-bottom: 16px;
}


.Logo {
    background: url('../Images/VPlogoVec.svg') no-repeat;
    display: block;
    width: 800px;
    height: 125px;
    margin-left: -100px;
    margin-bottom: -25px;
    background-position: center;
    background-size: 80%;
}

    .Logo:hover {
        background: url('../Images/VPlogoVecHov.svg') no-repeat;
        display: block;
        min-width: 800px;
        height: 125px;
        margin-left: -100px;
        margin-bottom: -25px;
        background-position: center;
        background-size: 80%;
    }

/*Fixes logo animation flicker by preloading hover .svg*/
.logo-load {
    background: url('../Images/VPlogoVecHov.svg');
}

.navbar {
    height: 45px;
    width: 100%;
    min-width: 1000px;
    background: #FFd1d1;
    border: .25em solid #060606;
    border-right: none;
    border-left: none;
    display: inline-block;
}

.navbar-link {
    text-decoration: none;
    height: 45px;
    display: inline-block;
    margin: -3px 0px 0px 0px;
    border: 3px solid #060606;
    border-radius: 11px;
    border-left: none;
    border-right: none;
    position: page;
}

    .navbar-link:hover {
        background-color: #ff6e7f;
    }

/*  (Button push-in effect) Not sure about atm so leaving out
    .navbar-link:active {
    background-color: #f51212;
    height:45px;
    border: 3px solid #060606;
    margin: -3px 0px 0px 0px;
    padding: 0 -2px 0 -2px;
}*/

#CreateButton {
    float: left;
    margin-left: 20px;
}

#LoginButton {
    float: right;
    margin-right: 5px;
}

#Search {
    float: right;
    margin: auto 20px auto 0;
}

#search-bar {
    margin-top: 9px;
    width: 200px;
    height: 25px;
    border: hidden;
    border-radius: 11px;
}

.search-bar-icon {
    margin: 0 0 -4px -40px;
    height: 18px;
    display: inline;
}

.navbar-link-text {
    margin: 10px 4px 13px;
    text-align: center;
    font-family: Verdana;
    font-size: 20px;
    font-weight: 900;
    color: #ffffff;
    text-shadow: -1px -1px 0px #060606, 0px -1px 0px #060606, 1px -1px 0px #060606, -1px 0px 0px #060606, 1px 0px 0px #060606, -1px 1px 0px #060606, 0px 1px 0px #060606, 1px 1px 0px #060606;
}

.page-headings {
    margin: 10px 0px 20px 50px;
    min-width: 600px;
}

/**              ***               **/
/* Index Page Stuff*/

.index-links {
    text-decoration: none;
    /*max-height: 260px;*/
    max-width: 560px;
    min-width: 525px;
    border: 3px dashed #060606;
    border-left: none;
    border-right: none;
    border-radius: 30px;
    margin: -10px auto 45px auto;
    padding: 5px 40px 20px 40px;
    transition-duration: .5s;
}

    .index-links:hover {
        background: #fafafa;
    }

.index-titles {
    /*min-height: 90px;*/
    min-width: 560px;
    /*margin: 0px 0px 0px 30px;*/
    font-size: 22px;
    font-weight: 900;
    color: #060606;
    clear: left;
    overflow-wrap: break-word;
    /*overflow:hidden;*/
}


    .index-titles:hover {
        text-decoration: underline;
        /*display: inline-block;*/
        /*min-height: 90px;*/
        /*margin: 0px 0px 0px 30px;*/
        font-size: 22px;
        font-weight: 900;
        color: #060606;
        clear: left;
        /*overflow: hidden;*/
    }

/*.line-clamp {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
}*/

/* .line-clamp:hover {
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
}*/

.index-pic {
    display: inline-block;
    float: left;
    margin: 15px 0 0 0;
    height: 185px;
    width: 275px;
    object-fit: cover;
}

.index-chart {
    float: right;
    height: 240px;
    width: 240px;
    margin: 3px 0 0 0;
    /*border-radius: 50%;*/
    -webkit-shape-outside: circle(50%);
    shape-outside: circle(50%);
}


/**              ***               **/
/*Story Page Stuff*/
.story-outer-width {
    width: 1175px;
    margin: 0 auto 0 auto;
}

.story-width {
    max-width: 1075px;
    margin: 0 0 0 100px;
}

.story-headings {
    display: block;
    font-size: 40px;
    margin: 20px auto 20px auto;
    width: 1075px;
    position: relative;
    left: 45px;
}

.story-author-date-box {
    margin: 10px 0 0 5px;
    width: 75px;
    padding: 10px;
    border: .3em dashed #060606;
    border-left: none;
    border-right: none;
    border-radius: 20px;
    float: left;
    position: relative;
    right: 5px;
    transition-duration: 1s;
}

    .story-author-date-box:hover {
        background: #fafafa;
        max-height: 500px;
    }

.story-pic {
    display: inline-block;
    float: left;
    margin: 10px 5px 0 0;
    height: 370px;
    width: 550px;
    object-fit: cover;
}

.story-pic-caption {
    color: #808080;
    font-size: 17px;
    font-weight: 500;
    clear: both;
    float: left;
    margin: 2px 0 -10px 0;
}

.story-chart-box {
    margin: 10px 0px 0px 15px;
    height: 362px;
    min-width: 490px;
    border: .25em dashed #060606;
    border-left: none;
    border-right: none;
    border-radius: 30px;
    display: block;
    float: left;
    position: static;
}

.story-chart {
    display: inline-block;
    float: left;
    margin: 5.5px 6px 0px -5px;
    border-radius: 100%;
    height: 350px;
    width: 363px;
}

.story-votebuttons-title {
    margin: 10px 0px 0px 15px;
}

.story-votebuttons {
    padding: 0px 10px 17px 20px;
    margin: 20px 0 0 0;
    width: 90px;
    max-height: 280px;
    overflow: hidden;
    background-color: #ffffff;
    border: .25em dashed #060606;
    border-left: none;
    border-right: none;
    border-radius: 27px;
    transition-duration: 1s;
    position: relative;
    z-index: auto;
}
/* ... */

